// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

import "defs/gogo.proto";

package pb;

message Label {
  string name = 1;
  string value = 2;
}

message LabelSet {
  option (gogoproto.stringer) =  false;
  repeated Label labels = 1;
}
